# regex-word-backend

./: .env.sample  Cargo.toml  Dockerfile  docker-compose.yml  todo.md
.github/workflows/: ci.yml
src/: main.rs
src/api/: mod.rs
src/api/regexword/: mod.rs  regexword_component.rs  regexword_dbo.rs  regexword_event_mongo_repository.rs  regexword_mongo_dao.rs  regexword_mongo_repository.rs
src/api/regexword/mappers/: events.rs  mod.rs  states.rs
src/api/regexword/query/: mod.rs
src/api/regexword/routes/: exemple_wit_api_key_routes.rs  read_routes.rs  write_routes.rs
src/api/regexword/services/: mod.rs  random_order_generator_impl.rs  rules.rs  select_regexword_service_impl.rs
src/api/regexword/services/random/: mod.rs  random_generator.rs
src/api/swagger/: mod.rs
src/core/: mod.rs
src/core/helpers/context/: mod.rs
src/core/regexword/command_handler/: activate_handler.rs  create_handler.rs  disable_handler.rs  increment_handler.rs  mod.rs  select_handler.rs
src/core/regexword/data/: mod.rs  regexword_data.rs
src/core/regexword/data/events/: mod.rs
src/core/regexword/data/states/: mod.rs  regexword.rs  regexword_activate.rs  regexword_disable.rs
src/core/regexword/mappers/: mod.rs
src/core/regexword/reducer/: mod.rs
src/core/regexword/repositories/: mod.rs
src/core/regexword/services/: mod.rs  random_order_generator.rs  rules.rs  select_regexword_service.rs
src/core/regexword/services/generate_regex/: mod.rs
src/models/regexword/commands/: mod.rs
src/models/regexword/views/: check_view.rs  mod.rs
(+2 files in other folders)
