[package]
name = "regex-word-backend"
version = "0.1.0"
edition = "2021"
default-run = "regex-word-backend"

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = "0.9.66"

[dependencies]
env_logger = "0.11.5"
framework-cqrs-lib = "0.5.9"
actix-web = { version = "4" }
actix-cors = "0.7.0"
serde = { version = "1.0.203", features = ["derive"] }
async-trait = "0.1.80"
utoipa = { version = "4.2.3", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
serde_json = "1.0.118"
futures = "0.3.30"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", features = ["json"] }
passwords = { version = "3.1.16", features = ["crypto", "common-password"]}
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
mongodb = { version = "3.0.0", features = ["sync"]}
uuid = {version = "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
regex-generator = "0.1.0"
dictionnaire = "0.1.2"